<resources>
    <string name="app_name">Insouq</string>
    <string name="google_places_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDdvVeT_QR6KjMJ1KldQFO6u8hyioTa16M</string>
    <string name="google_client_id" translatable="false">677303639754-ggotd556ld1vv1iu6buiedjpkj94nt9n.apps.googleusercontent.com</string>
    <string name="facebook_app_id" translatable="false">3101710686813874</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb3101710686813874</string>
    <string name="fb_client_token" translatable="false">1c1a77d84466f90aef21acf3186f397d</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="switch_to_arabic">Switch to Arabic</string>
    <string name="first_name">First Name</string>
    <string name="email">Email Address</string>
    <string name="email_phone">Email Address or Phone Number</string>
    <string name="your_password">Your password</string>
    <string name="sign_up">Sign up</string>
    <string name="or">or</string>
    <string name="sign_up_with_facebook">Sign up with facebook</string>
    <string name="agree_on">By signing up, I agree on their</string>
    <string name="agree_on_sign_in">By signing in, I agree on their</string>
    <string name="terms_and_conditions"><u>Terms and Conditions</u></string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="welcome_back" translatable="false">Welcome Back,</string>
    <string name="use_touch_id" translatable="false">Kindly use TouchID to verify</string>
    <string name="cant_use_touch_id" translatable="false">Can’t verify using TouchID?</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="facebook">Facebook</string>
    <string name="gmail">Gmail</string>
    <string name="one_last_step">One last step</string>
    <string name="mobile_entry_description">Kindly enter your mobile number below to complete your registration process.</string>
    <string name="continue_">Continue</string>
    <string name="back_to_sign_up">BACK TO sign up</string>
    <string name="verification">Verification</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="verification_email_description">Please enter the 6 digit OTP code sent to your registered email</string>
    <string name="verification_phone_description">Please enter the 6 digit OTP code sent to your registered phone</string>
    <string name="confirm">Confirm</string>
    <string name="log_in_with">login with</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="create_account">Create account</string>
    <string name="forgot_password_description">Kindly enter your registered phone number below to receive a code to reset your password.</string>
    <string name="back_to_login">Back to login</string>
    <string name="create_new_password">Create a new password</string>
    <string name="hey">Hey</string>
    <string name="new_password_description">Type in a new password that you can remember</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="change_password">Change password</string>
    <string name="search_hint">I am looking for...</string>
    <string name="choose_a_category">Choose a category</string>
    <string name="motors">Motors</string>
    <string name="property">Property</string>
    <string name="loading">Loading...</string>
    <string name="jobs">Jobs</string>
    <string name="services">Services</string>
    <string name="business">Business</string>
    <string name="classifieds">Classifieds</string>
    <string name="numbers">Numbers</string>
    <string name="electronics">Electronics</string>
    <string name="explore">Explore</string>
    <string name="ads_you_might_like">Ads you might like</string>
    <string name="view_all">View all</string>
    <string name="new_in_motors">New in motors</string>
    <string name="new_in_property">New in property</string>
    <string name="new_in_jobs">New in jobs</string>
    <string name="new_in_services">New in services</string>
    <string name="new_in_business">New in business</string>
    <string name="new_in_classifieds">New in classifieds</string>
    <string name="new_in_numbers">New in numbers</string>
    <string name="new_in_electronics">New in electronics</string>
    <string name="alert_title">Set up an alert</string>
    <string name="alert_description">And get to know when new ads are posted that match your criteria</string>
    <string name="notification_center">Notification Centre</string>
    <string name="filters">Filters</string>
    <string name="reset">Reset</string>
    <string name="service_type">Service Type</string>
    <string name="chat_messages">Chat messages</string>
    <string name="ad_updates">Ad updates</string>
    <string name="announcements">Announcements</string>
    <string name="filter_results">Filter Results</string>
    <string name="my_profile">My Profile</string>
    <string name="price_range">Price range</string>
    <string name="in_aed">in AED</string>
    <string name="year">Year</string>
    <string name="mileage">Mileage</string>
    <string name="in_kms">in Kms</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="location">Location</string>
    <string name="featured">Featured</string>
    <string name="all">All</string>
    <string name="sort_by">Sort by </string>
    <string name="in_sq_ft">(in sq. ft.)</string>
    <string name="property_type">Property type</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="industry">Industry</string>
    <string name="emirate">Emirate</string>
    <string name="digits">Digits</string>
    <string name="make_an_offer">Make an offer</string>
    <string name="business_description"> Description</string>
    <string name="similar_listing">Similar Listing</string>
    <string name="business_specifications">Business Specifications</string>
    <string name="location_map">Location Map</string>
    <string name="contact_seller">Contact Seller</string>
    <string name="chat">Chat</string>
    <string name="call">Call</string>
    <string name="sms">SMS</string>
    <string name="item_description">Item Description</string>
    <string name="item_specifications">Item Specifications</string>
    <string name="similar_electronics">Similar Electronics</string>
    <string name="apply_for_this_jobs">Apply for this job</string>
    <string name="job_description"> Description</string>
    <string name="similar_jobs">Similar Jobs</string>
    <string name="lets_start">Let\'s start</string>
    <string name="apply_for_job_description">Now please add any missing details about yourself to complete the application</string>
    <string name="current_location">Current location</string>
    <string name="phone_number">Phone number</string>
    <string name="birthdate">Birthdate</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="nationality">Nationality</string>
    <string name="education_level">Education level</string>
    <string name="current_company">Current Company</string>
    <string name="current_position">Current position</string>
    <string name="work_experience">Work experience</string>
    <string name="commitment">Commitment</string>
    <string name="notice_period">Notice period</string>
    <string name="visa_status">Visa status</string>
    <string name="career_level">Career level</string>
    <string name="apply_job_ckeckbox">By submitting this ad, I agree on Terms &amp; Conditions and Privacy Policy</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="specifications">Specifications</string>
    <string name="description">Description</string>
    <string name="similar_cars">Similar Cars</string>
    <string name="specs">Regional Specs</string>
    <string name="color">Color</string>
    <string name="doors">Doors</string>
    <string name="warranty">Warranty</string>
    <string name="transmissions">Transmissions</string>
    <string name="body_type">Body Type</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="no_of_cylinders">No of cylinders</string>
    <string name="horsepower">Horsepower</string>
    <string name="plate_description"> Description</string>
    <string name="similar_numbers">Similar Numbers</string>
    <string name="sq_ft">sq. ft.</string>
    <string name="property_info">Property Info</string>
    <string name="amenities">Amenities</string>
    <string name="similar_properties">Similar Properties</string>
    <string name="rate_this_company">Rate this company</string>
    <string name="similar_services">Similar Services</string>
    <string name="asking_price_by_seller">Asking price by seller</string>
    <string name="enter_your_price">Enter your price</string>
    <string name="make_this_offer">Make this offer</string>
    <string name="show_cv">Show CV</string>
    <string name="show_mobile_number">Show Mobile Number</string>
    <string name="my_ads">My Ads</string>
    <string name="my_saved_searches">My saved searches</string>
    <string name="my_jobs">My jobs</string>
    <string name="log_out">Logout</string>
    <string name="privacy">Privacy</string>
    <string name="profile_privacy">Hide my name and photo on my ads</string>
    <string name="subscribe">Subscribe</string>
    <string name="my_favorites">My Favorites</string>
    <string name="change_picture">Change picture</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="country_code">Country code</string>
    <string name="change_email_address">Change email address</string>
    <string name="default_location">Default location</string>
    <string name="default_language">Default language</string>
    <string name="change_mobile_number">Change mobile number</string>
    <string name="support">Support</string>
    <string name="terms_amp_conditions">Terms &amp; Conditions</string>
    <string name="sort_list">Sort List</string>
    <string name="newest_to_oldest">Newest to Oldest</string>
    <string name="oldest_to_newest">Oldest to Newest</string>
    <string name="price_highest_to_lowest">Price Highest to Lowest</string>
    <string name="price_lowest_to_highest">Price Lowest to Highest</string>
    <string name="sort">Sort</string>
    <string name="free">Free</string>
    <string name="keep_your_ad_free">Keep your ad free</string>
    <string name="upgrade_your_standard_ad_into_a_featured_one">Upgrade your standard ad into a featured one</string>
    <string name="normal">Normal</string>
    <string name="last_step">Last step</string>
    <string name="select_package_that_ad_for_you">Select package that AD for you</string>
    <string name="featured_ad_are_placed_on_top_of_all_ads">featured ad are placed on top of all ads</string>
    <string name="delete_ad_confirmation">Delete Ad Confirmation</string>
    <string name="your_ad_has_been_deleted_we_would_love_to_know_the_reason_for_deleting_your_ad">Your ad has been deleted, we would love to know the reason for deleting your ad.</string>
    <string name="i_sold_it_on_insouq">I sold it on Insouq</string>
    <string name="i_sold_it_somewhere_else">I sold it somewhere else</string>
    <string name="i_am_no_longer_interested_to_sell_it">I am no longer interested to sell it</string>
    <string name="no_specific_reason">No specific reason</string>
</resources>