<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_15sdp"
    android:background="@color/white"
    android:layout_marginStart="@dimen/_40sdp"
    android:layout_marginEnd="@dimen/_40sdp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_15sdp"
        android:background="@color/white">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/delete_ad_confirmation"
            android:fontFamily="@font/objectivity_medium"
            android:textColor="@color/purple_text"
            android:textSize="@dimen/_14ssp"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/your_ad_has_been_deleted_we_would_love_to_know_the_reason_for_deleting_your_ad"
            android:fontFamily="@font/objectivity_medium"
            android:textColor="@color/purple_text"
            android:textAlignment="viewStart"
            android:layout_marginTop="@dimen/_15sdp"
            android:textSize="@dimen/_12ssp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_20sdp">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/uae"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/light_purple_text"
                    android:checked="false"
                    android:text="@string/i_sold_it_on_insouq"
                    android:textColor="@color/purple_text"
                    android:textAllCaps="true"
                    android:textAlignment="viewStart"
                    android:fontFamily="@font/objectivity_medium"
                    android:textSize="@dimen/_10ssp"/>
                <RadioButton
                    android:id="@+id/jordan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/light_purple_text"
                    android:checked="false"
                    android:textAlignment="viewStart"
                    android:text="@string/i_sold_it_somewhere_else"
                    android:textColor="@color/purple_text"
                    android:textAllCaps="true"
                    android:fontFamily="@font/objectivity_medium"
                    android:textSize="@dimen/_10ssp"/>
                <RadioButton
                    android:id="@+id/iraq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/light_purple_text"
                    android:checked="false"
                    android:textAlignment="viewStart"
                    android:text="@string/i_am_no_longer_interested_to_sell_it"
                    android:textColor="@color/purple_text"
                    android:textAllCaps="true"
                    android:fontFamily="@font/objectivity_medium"
                    android:textSize="@dimen/_10ssp"/>
                <RadioButton
                    android:id="@+id/kuwait"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/light_purple_text"
                    android:checked="false"
                    android:textAlignment="viewStart"
                    android:text="@string/no_specific_reason"
                    android:textColor="@color/purple_text"
                    android:textAllCaps="true"
                    android:fontFamily="@font/objectivity_medium"
                    android:textSize="@dimen/_10ssp"/>
            </RadioGroup>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/continue_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:backgroundTint="@color/base_orange"
                android:text="@string/continue_"
                android:textColor="@color/white"
                android:fontFamily="@font/objectivity_medium"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>