<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="@dimen/_30sdp"
    android:layout_marginEnd="@dimen/_30sdp"
    app:cardElevation="@dimen/_3sdp"
    android:backgroundTint="@color/off_white"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="@dimen/_10sdp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/off_white"
        android:padding="@dimen/_10sdp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/last_step"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/close"
                android:layout_marginEnd="@dimen/_5sdp"
                android:text="@string/last_step"
                android:textColor="@color/purple_text"
                android:fontFamily="@font/objectivity_medium"
                android:textSize="@dimen/_13ssp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/last_step"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/select_package_that_ad_for_you"
                android:textColor="@color/purple_text"
                android:alpha="0.5"
                android:fontFamily="@font/objectivity_medium"
                android:textSize="@dimen/_10ssp"/>
            <TextView
                android:id="@+id/close"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="X"
                android:textColor="@color/purple_text"
                android:fontFamily="@font/objectivity_bold"
                android:textSize="@dimen/_10ssp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/free_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/white_radius_3"
            android:padding="@dimen/_5sdp">
            <TextView
                android:id="@+id/free_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/free"
                android:textColor="@color/light_purple_text"
                android:fontFamily="@font/objectivity_bold"
                android:textSize="@dimen/_13ssp"/>
            <TextView
                android:id="@+id/normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/free_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/normal"
                android:textColor="@color/light_purple_text"
                android:fontFamily="@font/objectivity_medium"
                android:textSize="@dimen/_10ssp"/>
            <CheckBox
                android:id="@+id/free_CB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/normal"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/keep_your_ad_free"
                android:textColor="@color/purple_text"
                android:fontFamily="@font/objectivity_medium"
                android:textSize="@dimen/_10ssp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/close"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_horizontal"
            android:text="@string/upgrade_your_standard_ad_into_a_featured_one"
            android:textColor="@color/purple_text"
            android:fontFamily="@font/objectivity_medium"
            android:textSize="@dimen/_10ssp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/close"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/featured_ad_are_placed_on_top_of_all_ads"
            android:textColor="@color/purple_text"
            android:fontFamily="@font/objectivity_medium"
            android:alpha="0.5"
            android:gravity="center_horizontal"
            android:textSize="@dimen/_8ssp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/packages_RV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/base_orange"
            android:layout_marginTop="@dimen/_15sdp"
            app:cornerRadius="@dimen/_10sdp"
            android:text="@string/continue_"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>