<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_15sdp"
    android:background="@color/white"
    android:layout_marginStart="@dimen/_40sdp"
    android:layout_marginEnd="@dimen/_40sdp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_15sdp"
        android:background="@color/white">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/sort_list"
            android:fontFamily="@font/objectivity_medium"
            android:textColor="@color/purple_text"
            android:textSize="@dimen/_14ssp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_20sdp">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/default_sort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/light_purple_text"
                    android:checked="false"
                    android:text="@string/newest_to_oldest"
                    android:textColor="@color/purple_text"
                    android:fontFamily="@font/objectivity_medium"
                    android:textSize="@dimen/_10ssp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/gray"/>

                <RadioButton
                    android:id="@+id/newest_oldest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/light_purple_text"
                    android:checked="false"
                    android:fontFamily="@font/objectivity_medium"
                    android:text="@string/oldest_to_newest"
                    android:textColor="@color/purple_text"
                    android:textSize="@dimen/_10ssp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/gray"/>
                <RadioButton
                    android:id="@+id/oldest_newest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/light_purple_text"
                    android:checked="false"
                    android:text="@string/price_highest_to_lowest"
                    android:textColor="@color/purple_text"
                    android:fontFamily="@font/objectivity_medium"
                    android:textSize="@dimen/_10ssp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/gray"/>
                <RadioButton
                    android:id="@+id/sort_test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/light_purple_text"
                    android:checked="false"
                    android:text="@string/price_lowest_to_highest"
                    android:textColor="@color/purple_text"
                    android:fontFamily="@font/objectivity_medium"
                    android:textSize="@dimen/_10ssp"/>
            </RadioGroup>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/sort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:backgroundTint="@color/base_orange"
                android:text="@string/sort"
                android:textColor="@color/white"
                android:fontFamily="@font/objectivity_medium"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>