<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_background"
    tools:context=".Views.Registration.SignUp.MobileEntryFragment">
    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/middle"
        android:scaleType="fitXY"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:src="@drawable/insouq_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/background"/>


    <TextView
        android:id="@+id/middle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp">
        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_40sdp"
            android:src="@drawable/phone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_last_step"
            android:fontFamily="@font/objectivity_bold"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_entry_description"
            android:gravity="center"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:textColor="@color/white"
            android:fontFamily="@font/objectivity_regular"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_13ssp"/>
        <EditText
            android:id="@+id/mobile_number_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_dark_purple"
            android:padding="@dimen/_12sdp"
            android:hint="@string/mobile_number"
            android:textColorHint="@color/white_trans40"
            android:fontFamily="@font/objectivity_light"
            android:textSize="@dimen/_10ssp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_10sdp"
            android:maxLength="14"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/continue_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/base_orange"
            app:cornerRadius="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/continue_"
            android:fontFamily="@font/objectivity_medium"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp"
            android:padding="@dimen/_12sdp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_sign_up"
            android:textColor="@color/white"
            android:alpha="0.5"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/objectivity_medium"
            android:textSize="@dimen/_9ssp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>